<resources>
    <string name="app_name">My movies</string>
    <string name="movie_image">Movie image</string>
    <string name="most_popular">Самые популярные</string>
    <string name="top_rated">Самые рейтинговые</string>
    <string name="original_title">Оригинальное название</string>
    <string name="title">Название</string>
    <string name="rating">Рейтинг</string>
    <string name="date_of_realise">Дата релиза</string>
    <string name="overview">Описание</string>
    <string name="main">Главная</string>
    <string name="favourite">Избранное</string>
    <string name="author">Author</string>
    <string name="content">Content</string>
    <string name="no_favourite_movies_yet">Любимых фильмов отсуствует</string>
</resources>